changed css to attempt to prevent projects getting clipped on mobile

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -17,7 +17,6 @@
 }
 
 #contact-form label {
-    color: white;
     display: block;
     font-weight: bold;
 }
